--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
@@ -98,7 +98,7 @@
         <a href="">@Translation.GetCoreTextTranslation("Visa hela Ärendeloggen") >></a>
     </div>
         <div class="all less" style="display: none">
-            <a href="">@Translation.GetCoreTextTranslation("Göm hela ärendeloggen") <<</a>
+            <a href="">@Translation.GetCoreTextTranslation("Visa endast senaste") <<</a>
         </div>
     }
 </div>
