--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_Communication.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_Communication.cshtml
@@ -62,22 +62,25 @@
                                 </div>
                             }
                         </div>
-                        <br />
-                        <div class="form-group col-md-10">
-                            <div class="col-sm-1 input-group workflowStepsPanel" style="display: none">
-                                <select name="steps" class="dropdown-group workflows-select" id="steps">
-                                    @* options are populated from client via ajax request - see workflowStepsBehavior.js*@
-                                </select>
-                                <span class="input-group-btn">
-                                    <a id="btnSendLog" data-src="communication" role="button" class="btn btn-default">@Translation.Get("Send")</a>
-                                    <i id="sendLogIndicator" style="display: none" class="gif-loader">&nbsp;</i>
-                                </span>
+                        <div class="container">
+                            <div class="row">
+                                <div class="form-group col-md-10">
+                                    <div class="col-sm input-group workflowStepsPanel" style="display: none">
+
+                                        <select name="steps" class="dropdown-group workflows-select" id="steps">
+                                            @* options are populated from client via ajax request - see workflowStepsBehavior.js*@
+                                        </select>
+                                        <br /> <br />
+                                    </div>
+                                    
+                                    <div class="col-sm">
+                                        <a id="btnSendLog" data-src="communication" role="button" class="btn btn-default">@Translation.Get("Send")</a>
+                                        <i id="sendLogIndicator" style="display: none" class="gif-loader">&nbsp;</i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        @*<div class="form-group col-md-10">
-                            
-                        </div>*@
-                    </form>
+                  </form>
                 </div>
             </div>
         }
