--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.html
@@ -1,30 +1,32 @@
 <mbsc-page [options]="pageSettings" class="login">
-    <div class="content">
-        <app-header-title></app-header-title>
-        <mbsc-form class="md-login-form">
-            <form [formGroup]="loginForm" novalidate (ngSubmit)="onSubmit()">
-                <div class="mbsc-form-group-inset">
-                    <mbsc-input formControlName="username" 
-                                [error]="f.username.touched && f.username.dirty && f.username.invalid" 
-                                [errorMessage]="getError('username')"
-                                input-style="outline" class="margin">User</mbsc-input>
-                    <mbsc-input formControlName="password" type="password" password-toggle="true" icon="none"
-                        icon-align="right" [error]="f.password.touched && f.password.dirty && f.password.invalid" [errorMessage]="getError('password')"
-                            input-style="outline" class="margin">Password</mbsc-input>
-                    <div class="mbsc-form-group-inset mbsc-padding md-load-btn">
-                        <mbsc-button flat type="submit" [disabled]="loginForm.invalid" [hidden]="isLoading" class="float-right">Login</mbsc-button>
-                        <mbsc-button flat icon="fa-refresh" [hidden]="!isLoading" class="float-right"></mbsc-button> 
-                    </div>
-                    <div style="text-align: center;" *ngIf="hasMicrosoftLogin">
-                      <button style="background-color:inherit" (click)="microsoftLogin()">
-                        <img style='width: fit-content;' src='content/img//ms-symbollockup_signin_light.svg'>
-                      </button>                      
-                  </div>
-                  <div *ngIf="error" class="alert alert-danger">{{ error }}</div>
-                  <mbsc-note color="danger" *ngIf="showLoginError" #loginError>User or Password is incorrect.</mbsc-note>
-                </div>
-            </form>
-        </mbsc-form>
-    </div>
+  <div class="content">
+    <app-header-title></app-header-title>
+    <mbsc-form class="md-login-form">
+      <form [formGroup]="loginForm" novalidate (ngSubmit)="onSubmit()">
+        <div class="mbsc-form-group-inset">
+          <mbsc-input formControlName="username" [error]="f.username.touched && f.username.dirty && f.username.invalid"
+            [errorMessage]="getError('username')" input-style="outline" class="margin">User</mbsc-input>
+          <mbsc-input formControlName="password" type="password" password-toggle="true" icon="none" icon-align="right"
+            [error]="f.password.touched && f.password.dirty && f.password.invalid" [errorMessage]="getError('password')"
+            input-style="outline" class="margin">Password</mbsc-input>
+          <div class="mbsc-padding md-load-btn">
+            <mbsc-button flat type="submit" [disabled]="loginForm.invalid" [hidden]="isLoading" class="float-right">
+              Login</mbsc-button>
+            <mbsc-button flat icon="fa-refresh" [hidden]="!isLoading" class="float-right"></mbsc-button>
+          </div>
+          <div></div>
+        </div>
+      </form>
+      <div style="height:30px" *ngIf="hasMicrosoftLogin">
+        <button class="microsoft-login" style="background-color:inherit;" (click)="microsoftLogin()">
+          <img style='width: fit-content;' src='content/img//ms-symbollockup_signin_light.svg'>
+        </button>
+      </div>
+      <div class="mbsc-form-group-inset">
+        <div *ngIf="error" class="alert alert-danger">{{ error }}</div>
+        <mbsc-note color="danger" *ngIf="showLoginError" #loginError>User or Password is incorrect.</mbsc-note>
+      </div>
+    </mbsc-form>
+  </div>
 </mbsc-page>
- <div style="display:none">{{ version }}</div>
+<div style="display:none">{{ version }}</div>
