--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.scss
@@ -16,9 +16,10 @@ mbsc-button {
     }
 }
 
-.microsoftLogin {
-  position: absolute;
+.microsoft-login {
+  text-align: center;
+  position:absolute;
   left: 50%;
-  top: 50%;
+  //  top: 40%;
   transform: translate(-50%, -50%)
 }
