--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.scss
@@ -18,8 +18,8 @@ mbsc-button {
 
 .microsoft-login {
   text-align: center;
-  position:absolute;
+  position:flex;
   left: 50%;
-  //  top: 40%;
+  top: 10px;
   transform: translate(-50%, -50%)
 }
