--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.html
@@ -17,7 +17,7 @@
           <div></div>
         </div>
       </form>
-      <div style="height:30px" *ngIf="hasMicrosoftLogin">
+      <div style="height:30px" *ngIf="showMicrosoftLogin">
         <button class="microsoft-login" style="background-color:inherit;" (click)="microsoftLogin()">
           <img style='width: fit-content;' src='content/img//ms-symbollockup_signin_light.svg'>
         </button>
