--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.scss
@@ -20,6 +20,11 @@ mbsc-button {
   text-align: center;
   position:flex;
   left: 50%;
-  top: 10px;
+  margin-top: 50px;
   transform: translate(-50%, -50%)
+}
+
+.md-load-btn {
+  margin-top: -10px;
+  padding-top: 0px;
 }
