#179704 - Task - Case templates - Possibility for different language of General section in Templates - Categories

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/EditCategory.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/EditCategory.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DH.Helpdesk.Web.Infrastructure
-@model DH.Helpdesk.Domain.CaseSolutionCategory
+@model DH.Helpdesk.Web.Models.CaseSolution.CaseSolutionCategoryViewModel 
 @{
     ViewBag.Title = "EditCategory";
 }
@@ -10,7 +10,7 @@
             <ul class="secnav">
         <li>@Html.ActionLink(Translation.Get("Spara", Enums.TranslationSource.TextTranslation), "edit", new { id = Model.Id }, new { onclick = "$('#target').submit();return false;" , @class = "btn" })</li>
         <li>@Html.ActionLink(Translation.Get("Ta bort", Enums.TranslationSource.TextTranslation), "deletecategory",
-                new { id = @Model.Id}, new { @class = "btn deleteDialog", deleteDialogText = Translation.Get("Är du säker på att du vill ta bort aktuell post", Enums.TranslationSource.TextTranslation) + "?" })</li>
+                new { id = Model.Id }, new { @class = "btn deleteDialog", deleteDialogText = Translation.Get("Är du säker på att du vill ta bort aktuell post", Enums.TranslationSource.TextTranslation) + "?" })</li>
         <li>@Html.ActionLink(Translation.Get("Avbryt", Enums.TranslationSource.TextTranslation), "index", null,new {@class = "btn"})</li>
          </ul>
        </div>   
