--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -58,15 +58,20 @@
                                 @Html.HiddenFor(model => model.CaseSolution.TemplatePath)
                                 @Html.HiddenFor(model => model.CaseSolution.ValidateOnChange)
                                 @Html.HiddenFor(model => model.CaseSolution.NextStepState)
+                                @Html.HiddenFor(model => model.CaseSolution.Id)
                                 <tr>
                                 <tr>
-                                    <td>
-                                        @Translation.GetCoreTextTranslation("Språk")
-                                    </td>
-                                    <td>
-                                        @Html.DropDownListFor(model => model.LanguageId, Model.Languages, new { id = "languageList" })
-                                    </td>
-                                </tr>
+                                    @if(ViewBag.ShowLanguageList != null && ViewBag.ShowLanguageList)
+                                    {
+                                    <tr>
+                                        <td>
+                                            @Translation.GetCoreTextTranslation("Språk")
+                                        </td>
+                                        <td>
+                                            @Html.DropDownListFor(model => model.LanguageId, Model.Languages, new { id = "languageList" })
+                                        </td>
+                                    </tr>
+                                    }
                                 <tr>
                                     <td style="width:200px">
                                         @Translation.Get("Ärendemall", Enums.TranslationSource.TextTranslation)
@@ -2714,8 +2719,11 @@
 
     }
 
-    $( document ).ready(function() {
-
+    $(document).ready(function () {
+        //TODO - Default Language
+        if (document.getElementById('languageList').value != 1) {
+            DisableControls();
+        }
         if (document.getElementById('Casesolution_ShowInsideCase').checked)
         {
             if(document.getElementById('ConnectTo').value==0  && document.getElementById('ConnectTo').value!='')
@@ -2745,12 +2753,19 @@
             //Disable controls
             
             window.location.href = '@Url.Action("Edit","CaseSolution")?id=' + @Model.CaseSolution.Id + "&languageId=" + selectedItem;
-            DisableControls();
+            
         });
     });
     function DisableControls() {
-        //CaseSolution_CaseSolutionCategory_Id
-        document.getElementById('CaseSolutionDescription').disabled = true;
-        document.getElementById('CaseSolution_CaseSolutionCategory_Id').disabled = true;
+        $(document).ready(function () {
+
+            $("#target :input").prop("disabled", true);
+            $("#Name").prop("disabled", false);
+            $("#ShortDescription").prop("disabled", false);
+            $("#Information").prop("disabled", false);
+            $("#languageList").prop("disabled", false);
+            $("#hidId").prop("disabled", false);
+            $(".bootstrap-switch-container").hide();
+        })
     }
 </script>
