#189025 & 183856 - Task - Case - Workflowstep should not be shown if Case is closed

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
@@ -370,13 +370,14 @@
 
 
                         }
-
-                        @*At the moment we do not check access for this /TAN*@
-                        @if (!Model.CaseLock.IsLocked)
+                        @if(Model.case_.FinishingDate ==  null)
                         {
-                            @Html.Partial("WorkflowStep", Model.WorkflowSteps)
+                            if (!Model.CaseLock.IsLocked)
+                            {
+                                @Html.Partial("WorkflowStep", Model.WorkflowSteps)
+                            }
                         }
-                    </ul>
+                        </ul>
                 </div>
                 <div class="pull-right">
                     <ul class="secnav">
