#179704 - Task - Case templates - Possibility for different language of General section in Templates

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -2762,7 +2762,7 @@
             $("#Information").prop("disabled", false);
             $("#languageList").prop("disabled", false);
             $("#hidId").prop("disabled", false);
-            $("#CaseSolutionCategory").prop("disabled", false);
+/*            $("#CaseSolutionCategory").prop("disabled", false);*/
             //Disable switchboxes
             $('#caseSolutionStatus').bootstrapSwitch('disabled', true);
             $('#overWritePopUp').bootstrapSwitch('disabled', true);
